--- a/styles.css
+++ b/styles.css
@@ -1,550 +1,188 @@
-body {
-    background-image: url("./img/bg.jpg");
-    background-position-x: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    vertical-align: stretch;
-    text-align: center;
-    color: #82b7cb;
-    font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    margin: 0;
 }
 
-h1 {
-    padding: auto;
-    font-size: 400%;
-}
-
-h2 {
-    line-height: 0px;
-}
-
-nav {
+#toggle{
     display: none;
 }
 
-    nav #dropdown a {
-        display: flex;
-        flex-direction: column;
-        line-height: 3em;
-    }
-
-        nav #dropdown a:hover {
-            background-color: #30343882;
-        }
-
-#menu {/* MENU ≡ */
-    color: #82b7cb;
+#menuc{
+    display: none;
+    top: 1%;
+    right: 1%;
     position: fixed;
-    top: 0.75rem;
-    right: 0.75rem;
-    background-color: #303438b1;
+    background-color: #000000db;
+    color: #ffffff;
     padding: 0.5rem .5rem;
     z-index: 100;
 }
 
-    #menu:hover {
-        background-color: #30343882;
-        color: #18bfef;
-    }
-
-#toggle:checked ~ #menu {
-    display: none;
-}
-
-#menuc {
-    display: none;
-}
-
-#toggle:checked ~ #menuc {
-    display: block;
+#menu{
     position: fixed;
-    line-height: 3vh;
-    font-size: 150%;
-    float: left;
-    top: 1vh;
-    right: 15em;
-    color: #82b7cb;
-    z-index: 1000;
+    top: 1%;
+    right: 1%;
+    background-color: #000000db;
+    color: #ffffff;
+    padding: 0.5rem .5rem;
+    z-index: 100;
 }
 
-    #toggle:checked ~ #menuc:hover {
-        color: #18bfef;
-        background-color: #1c1d1eb4;
-    }
-
-#toggle {
+#nav{
     display: none;
+    position: fixed;
+    text-align: center;
+    font-size: 3vh;
+    top: 0;
+    justify-content: space-between;
 }
 
-    #toggle:checked ~ nav {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        justify-content: space-between;
-        top: 0rem;
-        right: 0rem;
-        padding-top: 4vh;
-        height: 96vh;
-        background-color: #1c1d1edf;
-    }
-
-        #toggle:checked ~ nav ul.pages {
-            list-style: none;
-            display: flex;
-            flex-direction: column;
-            padding-left: 0;
-        }
-
-            #toggle:checked ~ nav ul.pages li {
-                display: block;
-                line-height: 4em;
-                padding: 0 2rem;
-            }
-
-                #toggle:checked ~ nav ul.pages a.active {
-                    background-color: #30343882;
-                }
-
-                #toggle:checked ~ nav ul.pages li.active {
-                    background-color: #30343882;
-                }
-
-                #toggle:checked ~ nav ul.pages li:hover {
-                    background-color: #30343882;
-                }
-
-        #toggle:checked ~ nav ul.icons {
-            display: flex;
-            list-style: none;
-            align-items: center;
-            padding-right: 1.5em;
-        }
-
-            #toggle:checked ~ nav ul.icons li {
-                margin: 0 2rem;
-            }
-
-                #toggle:checked ~ nav ul.icons li.phone {
-                    background-image: url(./img/phone.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 28px;
-                }
-
-                    #toggle:checked ~ nav ul.icons li.phone:hover {
-                        background-image: url(./img/phone2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 28px;
-                    }
-
-                #toggle:checked ~ nav ul.icons li.email {
-                    background-image: url(./img/email.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 70px;
-                    margin-top: .3rem;
-                }
-
-                    #toggle:checked ~ nav ul.icons li.email:hover {
-                        background-image: url(./img/email2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 70px;
-                    }
-
-                #toggle:checked ~ nav ul.icons li.git {
-                    background-image: url(./img/github.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 50px;
-                    margin-top: .5rem;
-                }
-
-                    #toggle:checked ~ nav ul.icons li.git:hover {
-                        background-image: url(./img/github2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 50px;
-                    }
-
-            #toggle:checked ~ nav img {
-                display: block;
-                visibility: hidden;
-                max-height: 50px;
-            }
-
-a {
-    text-decoration: none;
-    color: #82b7cb;
-}
-
-    a:hover {
-        color: #18bfef;
-    }
-
-#main {
-    background-color: #1c1d1eb4;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-    #main #feat {
-        border-bottom: 2px solid #003f4d;
-        min-width: 100%;
-    }
-
-    #main #feat iframe {
-        max-width: 100%;
-        max-height: max-content;
-    }
-
-        #main #feat ul {
-            display: block;
-            list-style: none;
-            padding: 0;
-        }
-
-            #main #feat ul li {
-                padding: auto;
-                justify-content: center;
-            }
-
-            #main #feat ul li img {
-                max-width: 100%;
-                max-height: 800px;
-            }
-
-    #main section {
-        display: block;
-        min-width: 100%;
-        max-width: 100%;
-    }
-
-        #main section div {
-            border: 2px solid #003f4d;
-        }
-
-            #main section div img {
-                max-width: 95%;
-                min-height: 20rem;
-                max-height: 20rem;
-            }
-
-#res {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: .01em;
-    background-color: #1c1d1eb4;
-}
-
-    #res ul {
-        padding-left: 0;
-        list-style: none;
-    }
-
-    #res div {
-        min-width: calc(100% - 4px);
-        border: 2px solid #003f4d;
-    }
-
-    #res #dl {
-        min-width: 100%;
-        text-align: center;
-    }
-
-    #res section {
-        display: block;
-        min-width: 100%;
-    }
-
-        #res section div {
-            text-align: center;
-            min-width: calc(50% - 4px);
-            border: 2px solid #003f4d;
-            max-height: stretch;
-        }
-
-        #res section div h2 {
-            text-align: center;
-        }
-
-img {
-    margin: auto;
-}
-
-img:hover {
-    transform: scale(1.02);
-}
-
-#title {
-    padding-top: .01em;
-    background-color: #1c1d1eb4;
-}
-
-table {
-    min-width: 100%;
-    border-right: 2px;
-    border-color: #003f4d;
-}
-
-    table th {
-        text-transform: uppercase;
-        background-color: #303438b1;
-        border: 2px solid #003f4d;
-    }
-
-    table td {
-        border-top: 0px;
-        border-style: dotted solid;
-        border-color: #003f4d;
-    }
-
-        table td img {
-            max-width: 100%;
-            max-height: 10em;
-        }
-
-        table td video {
-            max-width: 100%;
-            max-height: 10em;
-        }
-
-#email, #message, #fname, #lname {
-    background-color: #1c1d1eb4;
-}
-
-#email {
-    min-width: 40vw;
-}
-
-#message {
-    min-width: 80vw;
-    min-height: 10vh;
-}
-@media (min-width: 1040px) {
-    body {
-        font-size: 200%;
-    }
-
-    h1 {
-        font-size: 300%;
-        line-height: 0px;
-    }
-
-    #menu {
-        display: none;
-    }
-
-    #toggle:checked ~ #menuc {
-        display: none;
-    }
-
-    #toggle:checked ~ nav {
-        flex-direction: row;
-        background-color: #303438b1;
-        line-height: 6rem;
-        max-height: 6rem;
+    #nav ul{
         padding: 0;
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        margin-bottom: 0;
+        min-width: 100vw;
+        list-style: none;
+        justify-content: space-around;
+        background-color: #000000da;
     }
 
-        #toggle:checked ~ nav ul.pages {
-            flex-direction: row;
+        #nav ul a{
+            display: block;
+            padding: 10px;
         }
 
-            #toggle:checked ~ nav ul.pages li {
-                line-height: 3em;
-            }
+        #nav ul a:hover{
+            background-color: #032379da;
+        }
 
-                #toggle:checked ~ nav ul.pages li.active {
-                    background-color: #1c1d1eb4;
-                }
+#dropdown-menu{
+    display: none;
+    background-color: #000000da;
+    flex-direction: column;
+}
 
-                    #toggle:checked ~ nav ul.pages li:hover {
-                        background-color: #1c1d1eb4;
-                    }
+a{
+    text-decoration: none;
+    color: #ffffff;
+}
 
-    nav {
-        background-color: #303438e4;
-        line-height: 6rem;
-        max-height: 6rem;
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        margin-bottom: 0;
+#intro{
+    background-image: url(./img/bg2.jpg);
+    background-size: 100vw 50vh;
+    background-repeat: no-repeat;
+    min-height: 50vh;
+    text-align: center;
+    color:#ffffff;
+}
+
+    #intro h1{
+        font-size: 5vh;
+        padding: 22vh 0 0 0;
     }
 
-        nav ul.pages {
-            list-style: none;
-            display: flex;
-            align-items: center;
-            padding-left: 0;
-        }
+    #intro h2{
+        font-size: 4vh;
+    }
 
-            nav ul.pages #dropdown {
-                position: relative;
-                display: inline-block;
-            }
-
-            nav ul.pages #dropdown-menu {
-                display: none;
-                position: absolute;
-                min-width: 150%;
-                background-color: #303438c8;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                z-index: 1;
-            }
-
-                nav ul.pages #dropdown-menu a {
-                    display: block;
-                    max-height: 40px;
-                    padding: 0 0 40px 0;
-                    text-decoration: none;
-                }
-
-                    nav ul.pages #dropdown-menu a.active {
-                        background-color: #1c1d1eb4;
-                    }
-
-                    nav ul.pages #dropdown-menu a:hover {
-                        background-color: #1c1d1eb4;
-                    }
-
-            nav ul.pages #dropdown:hover #dropdown-menu {
-                display: block;
-            }
-
-            nav ul.pages li {
-                display: block;
-                padding: 0 2rem;
-            }
-
-                nav ul.pages li.active {
-                    background-color: #1c1d1eb4;
-                }
-
-                nav ul.pages li:hover {
-                    background-color: #1c1d1eb4;
-                }
-
-        nav ul.icons {
-            display: flex;
-            list-style: none;
-            align-items: center;
-        }
-
-            nav ul.icons li {
-                margin: 0 2rem;
-            }
-
-                nav ul.icons li.phone {
-                    background-image: url(./img/phone.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 28px;
-                }
-
-                    nav ul.icons li.phone:hover {
-                        background-image: url(./img/phone2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 28px;
-                    }
-
-                nav ul.icons li.email {
-                    background-image: url(./img/email.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 70px;
-                    margin-top: .3rem;
-                }
-
-                    nav ul.icons li.email:hover {
-                        background-image: url(./img/email2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 70px;
-                    }
-
-                nav ul.icons li.git {
-                    background-image: url(./img/github.png);
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: 50px;
-                    margin-top: .5rem;
-                }
-
-                    nav ul.icons li.git:hover {
-                        background-image: url(./img/github2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: 50px;
-                    }
-
-            nav img {
-                display: block;
-                visibility: hidden;
-                max-height: 50px;
-            }
-
-    #main section {
+    #intro ul{
+        padding: 0;
+        list-style: none;
         display: flex;
+        justify-content: space-evenly;
+    }
+
+        #intro ul li img{
+            max-width: 8vh;
+            max-height: 8vh;
+        }
+
+#projects{
+    width: 90vw;
+    color: white;
+    text-align: center;
+    font-size: 2vh;
+    margin: 1vh 5vw 0 5vw;
+    height: 5vh;
+    border-bottom: 50px;
+    background-color: #000000db;
+    background-size: 100vw;
+}
+
+#sections{
+    display: flex;
+    width: 90vw;
+    margin: 0 5vw 0 5vw;
+    flex-direction: column;
+}
+
+section{
+    color:white;
+    font-size: 2vh;
+    margin: 2vh 0 0 0;
+    border: #000000db;
+    background-color: #000000;
+    box-shadow: 10px 5px 5px #000000;
+}
+
+ section img{
+    width: 100%;
+    height: 30vh;
+ }
+
+#git{
+    background-color: rgba(0, 174, 255, 0.476);
+}
+
+#live{
+    background-color:rgba(136, 222, 135, 0.754) ;
+}
+
+@media (min-width: 600px) {
+    #menu{
+        display: none;
+    }
+
+    #nav{
+        display: flex;
+        font-size: 4vh;
+        transition: top 0.3s;
+    }
+
+        #nav ul{
+            display: flex;
+        }
+
+    #intro{
+        min-height: 100vh;
+        background-size: 100vw 100vh;
+        color: #ffffff;
+    }
+
+        #intro h1{
+            font-size: 5vw;
+            padding: 50vh 0 0 0;
+        }
+
+        #intro h2{
+            font-size: 5vw;
+        }
+
+        #intro ul li img{
+            max-width: 16vw;
+            height: 20vh;
+        }
+
+    #dropdown-menu{
+        position: absolute;
+    }
+
+    #sections{
+        background-color: #000000a9;
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
     }
 
-        #main section div {
-            min-width: calc(50% - 4px);
-            border: 2px solid #003f4d;
-            max-height: stretch;
-        }
-
-            #main section div img {
-                min-height: stretch;
-                max-height: 40vh;
-                max-width: 54vh;
-            }
-
-    #main #feat ul {
-        display: flex;
-        list-style: none;
-        padding: 0;
+    section{
+        width: 25.5vw;
+        margin: 2vh 2vw 0 2vw;
     }
-
-        #main #feat ul li {
-            display: block;
-            min-width: 33%;
-            max-width: 33%;
-            margin: auto;
-            justify-content: space-between;
-        }
-
-            #main #feat ul li img {
-                max-width: 40%;
-            }
-
-#res {
-    min-width: 100%;
-}
-
-
-
-    #res section {
-        display: flex;
-        flex-direction: column;
-        min-width: 50%;
-        max-width: 50%;
-        justify-content:space-between;
-    }
-
-        #res section div {
-            text-align: left;
-            border: 2px solid #003f4d;
-            min-height: 10em;
-        }
-
 }
