--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
     }
 
     #nav a:hover{
-        background-color: #032379da;
+        background-color: #4a4b4f9e;
     }
 
 #dropdown-menu{
@@ -61,6 +61,10 @@ a{
     text-decoration: none;
     color: #ffffff;
 }
+
+    a:hover{
+        color:#008cff;
+    }
 
 #intro{
     background-image: url(./img/bg2.jpg);
@@ -122,10 +126,24 @@ section{
     box-shadow: 10px 5px 5px #000000;
 }
 
- section img{
-    width: 100%;
-    height: 30vh;
- }
+    section img{
+        width: 100%;
+        height: 30vh;
+    }
+
+    section h2{
+        text-align: center;
+    }
+
+    section iframe{
+        width: 100%;
+        height: 30vh;
+    }
+
+    section div{
+        display: flex;
+        justify-content: center;
+    }
 
 #git{
     background-color: rgba(0, 174, 255, 0.476);
@@ -134,6 +152,10 @@ section{
 
 #live{
     background-color:rgba(136, 222, 135, 0.754) ;
+}
+
+#dl{
+    background-color:#1b73e1;
 }
 
 #title{
@@ -234,6 +256,8 @@ table {
         width: 25.5vw;
         margin: 2vh 2vw 0 2vw;
     }
+
+
 
     #title{
         margin: 2vh 5vw 0 5vw;
