--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ a{
 
 section{
     color:white;
-    font-size: 2vh;
+    font-size: 4vw;
     margin: 2vh 2vw 0 2vw;
     border: #000000db;
     background-color: #000000e2;
@@ -144,6 +144,10 @@ section{
         display: flex;
         justify-content: center;
     }
+
+button{
+    font-size: 3vw;
+}
 
 #git{
     background-color: rgba(0, 174, 255, 0.476);
@@ -200,7 +204,7 @@ table {
             max-height: 10em;
         }
 
-@media (min-width: 821px) {
+@media screen and (orientation:landscape) {
     #toppad{
         padding:3vh;
     }
@@ -240,6 +244,10 @@ table {
             height: 20vh;
         }
 
+    button{
+        font-size: 2vh;
+    }
+
     #dropdown-menu{
         background-color: #000000da;
         position: absolute;
@@ -253,11 +261,10 @@ table {
     }
 
     section{
+        font-size: 2vw;
         width: 25.5vw;
         margin: 2vh 2vw 0 2vw;
     }
-
-
 
     #title{
         margin: 2vh 5vw 0 5vw;
