--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ section{
     }
 
 button{
-    font-size: 3vw;
+    font-size: 3vh;
 }
 
 #git{
@@ -162,9 +162,13 @@ button{
     background-color:#1b73e1;
 }
 
+#pad{
+    padding: 2vh;
+}
+
 #title{
     width: 90vw;
-    margin: 0 5vw 0 5vw;
+    margin: 0 5vw;
     text-align: center;
     font-size: 3vh;
     color: white;
@@ -206,7 +210,7 @@ table {
 
 @media screen and (orientation:landscape) {
     #toppad{
-        padding:3vh;
+        padding:4vh;
     }
 
     #menu{
@@ -245,7 +249,7 @@ table {
         }
 
     button{
-        font-size: 2vh;
+        font-size: 3vh;
     }
 
     #dropdown-menu{
@@ -267,7 +271,6 @@ table {
     }
 
     #title{
-        margin: 2vh 5vw 0 5vw;
         font-size: 4vh;
     }
 
